Bug/Bug Fixes:
-!kumiko works again
-!pug works again

New Features/Updates:
-Minimum bet for blackjack was lowered to 10 gbp
-You can now surrender in blackjack
-You can now split in blackjack
-!guessgame has changed to !gg
-Only 4gbp from each lottery ticket goes towards the pot


