@@ -1,0 +1,8 @@
+module.exports = {
+    name: 'test',
+    description: 'custom emoji test',
+    execute(message,args){
+        message.react('714888315173601350')
+    }
+
+}
