@@ -1,1 +1,1 @@
-{"450001712305143869":{"name":"Colin","simmerdown":0,"gbp":8207},"497803559144914944":{"name":"Andrew","simmerdown":0,"gbp":500},"499328039621230592":{"name":"Wyatt","simmerdown":0,"gbp":500},"463080062175019010":{"name":"Ian","simmerdown":0,"gbp":500},"210861925771247636":{"name":"Zaid","simmerdown":0,"gbp":500},"501929393401364481":{"name":"Mike","simmerdown":0,"gbp":500},"509430603339399186":{"name":"Brian","simmerdown":0,"gbp":500},"526190184455471105":{"name":"Carl","simmerdown":0,"gbp":500},"462798271195119626":{"name":"Alex","simmerdown":0,"gbp":500},"562203622474252288":{"name":"Dylan","simmerdown":0,"gbp":500},"501887537451630593":{"name":"Ramzi","simmerdown":0,"gbp":500},"434471986748456962":{"name":"Chrisvan","simmerdown":0,"gbp":500},"497861779020578837":{"name":"Hayden","simmerdown":0,"gbp":500},"501930484838957069":{"name":"Tom","simmerdown":0,"gbp":500},"581903756111773716":{"name":"Justin","simmerdown":0,"gbp":500},"508076579684089896":{"name":"Jacob","simmerdown":0,"gbp":500},"525147400176664626":{"name":"Teddy","simmerdown":0,"gbp":500},"640368746690510868":{"name":"Slim","simmerdown":0,"gbp":500},"498262864541515786":{"name":"Derek","simmerdown":0,"gbp":500}}
+{"450001712305143869":{"name":"Colin","simmerdown":0,"gbp":9503},"497803559144914944":{"name":"Andrew","simmerdown":0,"gbp":500},"499328039621230592":{"name":"Wyatt","simmerdown":0,"gbp":500},"463080062175019010":{"name":"Ian","simmerdown":0,"gbp":500},"210861925771247636":{"name":"Zaid","simmerdown":0,"gbp":500},"501929393401364481":{"name":"Mike","simmerdown":0,"gbp":500},"509430603339399186":{"name":"Brian","simmerdown":0,"gbp":500},"526190184455471105":{"name":"Carl","simmerdown":0,"gbp":500},"462798271195119626":{"name":"Alex","simmerdown":0,"gbp":500},"562203622474252288":{"name":"Dylan","simmerdown":0,"gbp":500},"501887537451630593":{"name":"Ramzi","simmerdown":0,"gbp":500},"434471986748456962":{"name":"Chrisvan","simmerdown":0,"gbp":500},"497861779020578837":{"name":"Hayden","simmerdown":0,"gbp":500},"501930484838957069":{"name":"Tom","simmerdown":0,"gbp":500},"581903756111773716":{"name":"Justin","simmerdown":0,"gbp":500},"508076579684089896":{"name":"Jacob","simmerdown":0,"gbp":500},"525147400176664626":{"name":"Teddy","simmerdown":0,"gbp":500},"640368746690510868":{"name":"Slim","simmerdown":0,"gbp":500},"498262864541515786":{"name":"Derek","simmerdown":0,"gbp":500}}
