@@ -1,3 +1,5 @@
 !roles: Shows the electable roles
 
 !changelog: Displays list of everything that was changed in newest update
+
+!boo: Works the same way as !insults but lets makes bot auto react :booo: on any non-command post
